# leakage-detection-system

./: .envrc  .gitignore  AGENTS.md  CODE_GUIDE.md  README.md  analyze_false_positives.py  check_units.py  count_sensors.py  dump.rdb  flake.nix  main.py  output.txt  presentation.tex  pyproject.toml  requirements.txt  temp.inp  temp.rpt  test_basic.py  test_detection.py  test_multi_agent_system.py  test_multi_leak.py  test_performance.py  test_system.py
data_layer/: __init__.py  collector.py  processor.py  utils.py
docs/: ARCHITECTURE.md  training_dataset.schema.json
leak_detection/: __init__.py  config.py  orchestrator.py
leak_detection/agents/: __init__.py  base.py  coordinator_agent.py  localizer_agent.py  multi_agent_system.py  sensor_agent.py
leak_detection/ai_layer/: __init__.py  agent_controller.py  decision_engine.py  inference_engine.py  leak_localizer.py
leak_detection/data_layer/: __init__.py  data_pipeline.py  feature_extractor.py  redis_manager.py  telemetry_buffer.py
leak_detection/simulation/: __init__.py  device_simulator.py  leak_injector.py  network_simulator.py
leak_detection/tui/: __init__.py  dashboard.py
simulation_layer/: wntr_driver.py
src/leak_detect_ai_physics/: __init__.py  config.py
src/leak_detect_ai_physics/ai_layer/: __init__.py  inference.py  trainer.py
src/leak_detect_ai_physics/data_layer/: collector.py  dataset_builder.py  processor.py  schema.py  storage.py  utils.py
src/leak_detect_ai_physics/simulation_layer/: wntr_driver.py
tests/: test_dataset_builder.py  test_processor.py  test_simulation_layer.py  test_utils.py
